.kubernetes/entitlement/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: entitlement
  annotations:
    deployment.kubernetes.io/revision: '1'
    kubectl.kubernetes.io/default-container: 'app'
spec:
  selector:
    matchLabels:
      app: entitlement
  replicas: 1
  template:
    metadata:
      labels:
        app: entitlement
    spec:
      nodeSelector:
        mosaic.axinom.com/workload_type: general
      imagePullSecrets:
        - name: axinom-registry-customizable-services-pull
      volumes:
        - name: ax-ca-certs
          configMap:
            name: ax-ca-certs
            defaultMode: 420
            items:
              - key: postgres-ca.crt
                path: postgres-ca.crt
      containers:
        - name: app
          image: harbor.axinom.com/mosaic/customizable-services-dev/entitlement-service:latest
          volumeMounts:
            - name: ax-ca-certs
              mountPath: /etc/axinom/tls/extra-ca-certs/postgres-ca.crt
              subPath: postgres-ca.crt
              readOnly: true
          ports:
            - containerPort: 9090
              name: metrics
              protocol: TCP
            - containerPort: 9911
              name: diagnostics
              protocol: TCP
            - containerPort: 10300
              name: app
              protocol: TCP
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /live
              port: 9000
              scheme: HTTP
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 30
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /ready
              port: 9000
              scheme: HTTP
            periodSeconds: 15
            successThreshold: 1
            timeoutSeconds: 15
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
