.kubernetes/entitlement/base/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: entitlement-app
spec:
